# nextmove-skill

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NEXT_TASK.md  PROJECT.md  README.md  SKILL.md  pyproject.toml  skill.json
.ai/: NEXT_TASK.md
.github/: PULL_REQUEST_TEMPLATE.md
application/: __init__.py
backend/: requirements-dev.txt
benchmark/: __init__.py  __main__.py  evaluator.py  loader.py  runner.py  schemas.py
docs/: agent-compatibility.md  agent-loading-guide.md  agent-prompt-template.md  ai-architecture.md  ai-quality-validation.md  architecture.md  credential-boundary.md  demo-output.md  epic-025.3-baseline-confirmation.md  output-guide.md  pilot-feedback-template.md  pilot-guidelines.md  provider-integration.md  quick-start.md  release-checklist-v0.8.0.md  release.md  skill-distribution-adoption.md
epic001/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md
examples/: agent_demo.py  ai_enhancement_demo.py  analyze_resume.py  full_career_analysis.py  match_job.py  skill_demo.py
frontend/: .prettierignore  package-lock.json  package.json
scripts/: build_skill_package.py  check_skill_package.py  run_ai_pilot.py  run_ai_quality_evaluation.py  run_human_career_report.py
skill/: __init__.py  __main__.py  __version__.py  interface.py  metadata.py
tests/: test_agent_adapter.py  test_agent_runtime.py  test_agent_tools.py  test_ai_application_operations.py  test_ai_application_runtime.py  test_ai_application_transport.py  test_ai_enhancement.py  test_ai_operations.py  test_ai_pilot_artifacts.py  test_ai_runtime.py  (+48 more)
(+236 files in other folders)
