[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nextmove-skill"
description = "Provider-neutral AI Career Intelligence Skill Framework."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "NextMove" },
]
dependencies = []
dynamic = ["version"]

[project.scripts]
nextmove = "skill.__main__:main"

[tool.setuptools.packages.find]
include = ["skill*"]

[tool.setuptools.dynamic]
version = { attr = "skill.__version__.__version__" }

[tool.setuptools.data-files]
"share/nextmove-skill" = ["SKILL.md", "skill.json"]
"share/nextmove-skill/examples" = ["examples/skill_demo.py"]
